Add link footer

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url(./images/sunrise.jpg);
+    background-image: url();
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
