--- a/styles.css
+++ b/styles.css
@@ -52,14 +52,37 @@ body {
     margin-top: auto;
     text-align: center;
     background-color: rgba(75, 75, 75, 0.807);
-    color:antiquewhite;
-    
+    color:#FEF2BF;
+    padding-bottom: 1rem;
 }
 
-.footer > a {
-    color: blue;
-    text-decoration: none;
+a {
+margin: 5px;
+padding: 0 5px;
 }
+
+a:link {
+background-color: none;
+color: #FEF2BF;
+text-decoration: none;
+}
+
+a:visited {
+color: #FEF2BF;
+text-decoration: none;
+}
+
+a:hover {
+background-color: #065ab4c6;
+color: #FEF2BF;
+text-decoration: none;
+border-radius: 5px;
+}
+
+a:active {
+background-color: #065ab4c6;
+text-decoration: none;
+} 
 
 .alarm {
     font-size: 1.5rem;
@@ -121,4 +144,8 @@ body {
     font-size: 2rem;
     font-weight: bold;
     padding-left: 0.5rem;
+}
+
+form {
+    text-align: center;
 }
